--- a/app/src/main/res/layout/fragment_edit_timezone_item.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone_item.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lLayout_timezone_item"
     android:layout_width="match_parent"
     android:layout_height="54dp"
-    android:background="@color/color_white"
-    android:orientation="vertical">
+    android:background="@color/color_white">
 
     <TextView
-        android:id="@+id/tv_timezone_item"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_timezone_id"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:text="中国/香港"
-        android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:id="@+id/tv_timezone_gmt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_timezone_id"
+        android:textColor="@color/color_666666" />
+
+    <ImageView
+        android:id="@+id/imv_item_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/icon_check" />
 
     <View
         android:layout_width="match_parent"
@@ -20,4 +33,4 @@
         android:layout_gravity="bottom"
         android:background="@color/color_f2f2f2" />
 
-</FrameLayout>
+</RelativeLayout>
