--- a/app/src/main/res/layout/fragment_mag_edit_timezone_item.xml
+++ b/app/src/main/res/layout/fragment_mag_edit_timezone_item.xml
@@ -7,7 +7,7 @@
     android:background="@color/color_white">
 
     <TextView
-        android:id="@+id/tv_timezone_item"
+        android:id="@+id/tv_timezone_id"
         android:layout_marginTop="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
