--- a/app/src/main/res/layout/fragment_simple_dialog.xml
+++ b/app/src/main/res/layout/fragment_simple_dialog.xml
@@ -4,44 +4,57 @@
     android:layout_height="match_parent"
     tools:context="com.cylan.jiafeigou.widget.dialog.SimpleDialogFragment">
 
-    <TextView
-        android:id="@+id/tv_dialog_title"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="您是否确定删除?"
-        android:textColor="@color/color_979797"
-        android:textSize="16sp" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_dialog_btn_left"
-            style="@style/ripple_background"
+            android:id="@+id/tv_dialog_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="确定"
-            android:textColor="@color/color_4b9fd5"
-            android:textSize="14sp" />
+            android:textColor="@color/color_979797"
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tv_dialog_btn_right"
-            style="@style/ripple_background"
+            android:id="@+id/tv_dialog_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="取消"
-            android:textColor="@color/color_4b9fd5"
-            android:textSize="14sp" />
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_dialog_btn_left"
+                style="@style/ripple_background"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="确定"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_dialog_btn_right"
+                style="@style/ripple_background"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="取消"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
