--- a/app/src/main/res/layout/fragment_edit_timezone_item.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone_item.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lLayout_timezone_item"
     android:layout_width="match_parent"
-    android:layout_height="54dp"
-    android:background="@color/color_white">
+    android:layout_height="54dp">
 
-    <TextView
-        android:id="@+id/tv_timezone_id"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black" />
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_timezone_gmt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_timezone_id"
-        android:textColor="@color/color_666666" />
+        <TextView
+            android:id="@+id/tv_timezone_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_timezone_gmt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_666666" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imv_item_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+        android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="10dp"
         android:src="@drawable/icon_check" />
 
@@ -33,4 +38,4 @@
         android:layout_gravity="bottom"
         android:background="@color/color_f2f2f2" />
 
-</RelativeLayout>
+</FrameLayout>
