--- a/app/src/main/res/layout/fragment_set_device_alias.xml
+++ b/app/src/main/res/layout/fragment_set_device_alias.xml
@@ -1,12 +1,84 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.bind.SetDeviceAliasFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="81dp"
+        android:text="@string/ADD_SUCC_1"
+        android:textColor="@color/color_333333"
+        android:textSize="26sp" />
 
-</FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:text="@string/Tap1_AddDevice_SetName"
+        android:textColor="@color/color_333333"
+        android:textSize="16sp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="54dp">
+
+
+        <EditText
+            android:id="@+id/et_input_box"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@null"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center"
+            android:maxLength="60"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:textColor="@color/color_666666"
+            android:textColorHint="@color/color_cecece"
+            android:textCursorDrawable="@drawable/bg_common_cursor"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/iv_clear_alias"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:src="@drawable/btn_login_clear_text" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/color_f2f2f2" />
+    </FrameLayout>
+
+    <com.cylan.jiafeigou.widget.LoginButton
+        android:id="@+id/btn_bind_done"
+        android:layout_width="173dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="38dp"
+        android:gravity="center"
+        android:text="@string/FINISHED"
+        android:textColor="@color/color_4b9fd5"
+        android:textSize="17sp"
+        hunt:lb_stroke_color="@color/color_d8d8d8" />
+</LinearLayout>
