--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fLayout_submit_bind_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
@@ -10,26 +11,67 @@
 
     <include layout="@layout/layout_top_bar_item" />
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+    <ViewSwitcher
+        android:id="@+id/vs_layout_switch"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
-            android:id="@+id/progress_loading"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            hunt:progress_point_radius="5dp"
-            hunt:progress_swipe_degree="330" />
 
-        <TextView
-            android:id="@+id/tv_loading_percent"
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="10" />
-    </FrameLayout>
+            android:visibility="invisible">
+
+            <com.cylan.jiafeigou.widget.SimpleProgressBar
+                android:id="@+id/progress_loading"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                hunt:progress_point_radius="5dp"
+                hunt:progress_stroke_color="@color/color_4b9fd5"
+                hunt:progress_swipe_degree="330" />
+
+            <TextView
+                android:id="@+id/tv_loading_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/color_36bdff"
+                android:textSize="57sp" />
+        </FrameLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/btn_bind_repeat"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="39dp"
+                android:gravity="center"
+                android:text="@string/NO_NETWORK_2"
+                android:textColor="@color/color_333333"
+                android:textSize="16sp" />
+
+            <com.cylan.jiafeigou.widget.LoginButton
+                android:id="@+id/btn_bind_repeat"
+                android:layout_width="173dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="@string/TRY_AGAIN"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="17sp"
+                hunt:lb_stroke_color="@color/color_d8d8d8" />
+        </RelativeLayout>
+    </ViewSwitcher>
+
 
 </FrameLayout>
