--- a/app/src/main/res/layout/activity_cloud_live.xml
+++ b/app/src/main/res/layout/activity_cloud_live.xml
@@ -87,6 +87,30 @@
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
 
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/ll_no_mesg"
+            android:layout_marginTop="147dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/icon_no_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:text="暂无消息"
+                android:textSize="15sp"
+                android:textColor="#aaaaaa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
         <ProgressBar
             android:visibility="invisible"
             android:id="@+id/progress_re_connet"
