--- a/app/src/main/res/layout/fragment_mine_share_device.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device.xml
@@ -26,7 +26,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="48dp"
-            android:text="分享设备"
+            android:text="@string/Tap3_ShareDevice"
             android:textColor="@color/color_white"
             android:textSize="18sp" />
 
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="暂无设备"
+                android:text="@string/Tap3_ShareDevice_NoDevice"
                 android:textColor="#aaaaaa"
                 android:textSize="15sp" />
         </LinearLayout>
