--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,6 +75,7 @@
     <color name="color_4C000000">#4C000000</color>
     <color name="color_33333">#333333</color>
     <color name="color_E1E1E1">#e1e1e1</color>
+    <color name="color_818181">#818181</color>
 
 
     <!--纯色-->
