--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -203,4 +203,22 @@
     <style name="wechat_share" parent="@android:style/Theme.Translucent">
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <style name="status_bar_text_title">
+        <item name="android:textAppearance">
+            @style/TextAppearance.StatusBar.EventContent.Title
+        </item>
+    </style>
+
+    <style name="status_bar_text_content">
+        <item name="android:textAppearance">
+            @style/TextAppearance.StatusBar.EventContent
+        </item>
+    </style>
+
+    <style name="status_bar_text_time">
+        <item name="android:textAppearance">
+            @style/TextAppearance.StatusBar.EventContent.Info
+        </item>
+    </style>
 </resources>
