--- a/app/src/main/res/layout/circle_progress_bar.xml
+++ b/app/src/main/res/layout/circle_progress_bar.xml
@@ -1,7 +1,9 @@
 <com.cylan.jiafeigou.widget.SimpleProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/progress_bar"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
     android:padding="10dp"
-    hunt:progress_point_radius="3dp" />
+    hunt:progress_point_radius="3dp"
+    hunt:progress_swipe_degree="310"
+    hunt:progress_stroke_color="@color/color_white" />
