--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -22,4 +22,11 @@
         android:layout_gravity="end|center_vertical"
         android:checked="true"
         android:gravity="end" />
+
+    <View
+        android:id="@+id/v_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="bottom"
+        android:background="@color/color_e8e8e8" />
 </merge>
