--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -114,6 +114,8 @@
         <attr name="sv_sub_title" format="string|reference" />
         <attr name="sv_sub_title_max_len" format="integer" />
         <attr name="sv_image_src" format="reference" />
+        <attr name="sv_visibility" format="boolean" />
+        <attr name="sv_v_divider" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="LLViewStyle">
@@ -156,10 +158,10 @@
 
     <!--相册选择框架勾出-->
     <declare-styleable name="GFFloatingActionButton">
-        <attr name="fabColorPressed" format="color"/>
-        <attr name="fabColorNormal" format="color"/>
-        <attr name="fabIcon" format="reference"/>
-        <attr name="fabTitle" format="string"/>
+        <attr name="fabColorPressed" format="color" />
+        <attr name="fabColorNormal" format="color" />
+        <attr name="fabIcon" format="reference" />
+        <attr name="fabTitle" format="string" />
     </declare-styleable>
 
     <declare-styleable name="HorizontalListView">
@@ -191,25 +193,25 @@
     </declare-styleable>
 
     <declare-styleable name="TimeWheelView">
-        <attr name="divideLine_height" format="dimension|reference"/>
-        <attr name="markLine_color" format="color|reference"/>
-        <attr name="markLine_color_bg" format="color|reference"/>
-        <attr name="markLine_width" format="dimension|reference"/>
-        <attr name="monthText_color" format="color|reference"/>
-        <attr name="monthText_size" format="dimension|reference"/>
-        <attr name="monthLine_color" format="color|reference"/>
-        <attr name="monthLine_width" format="dimension|reference"/>
-        <attr name="divideLine_color" format="color|reference"/>
-        <attr name="divideLine_width" format="dimension|reference"/>
-        <attr name="popWindow_showTime" format="integer|reference"/>
-        <attr name="animate_duration" format="integer|reference"/>
-        <attr name="popWindow_layout" format="reference"/>
-        <attr name="popWindow_margin" format="dimension|reference"/>
-        <attr name="markLine_space" format="dimension|reference"/>
-        <attr name="markLine_height" format="dimension|reference"/>
-        <attr name="monthLine_height" format="dimension|reference"/>
-        <attr name="monthText_margin" format="dimension|reference"/>
-        <attr name="bound_line_width" format="dimension|reference"/>
-        <attr name="bound_line_color" format="color|reference"/>
+        <attr name="divideLine_height" format="dimension|reference" />
+        <attr name="markLine_color" format="color|reference" />
+        <attr name="markLine_color_bg" format="color|reference" />
+        <attr name="markLine_width" format="dimension|reference" />
+        <attr name="monthText_color" format="color|reference" />
+        <attr name="monthText_size" format="dimension|reference" />
+        <attr name="monthLine_color" format="color|reference" />
+        <attr name="monthLine_width" format="dimension|reference" />
+        <attr name="divideLine_color" format="color|reference" />
+        <attr name="divideLine_width" format="dimension|reference" />
+        <attr name="popWindow_showTime" format="integer|reference" />
+        <attr name="animate_duration" format="integer|reference" />
+        <attr name="popWindow_layout" format="reference" />
+        <attr name="popWindow_margin" format="dimension|reference" />
+        <attr name="markLine_space" format="dimension|reference" />
+        <attr name="markLine_height" format="dimension|reference" />
+        <attr name="monthLine_height" format="dimension|reference" />
+        <attr name="monthText_margin" format="dimension|reference" />
+        <attr name="bound_line_width" format="dimension|reference" />
+        <attr name="bound_line_color" format="color|reference" />
     </declare-styleable>
 </resources>
